# siglentRust

./: Cargo.toml  README.md  shell.nix
src/: main.rs
src/scope/: scope.rs
