[package]
name = "siglent_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.0"
env_logger = "0.9.1"
fugit = "0.3.6"
nom = "7.1.1"
byteorder = "1.4.3"
plotters = "0.3.1"
rayon = "1.5.3"
realfft = { git = "https://github.com/HEnquist/realfft.git", branch = "master" }

[profile.release]
strip = true
opt-level = 3
lto = true
panic = "abort"